<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".periodicos.ActivityAnadirPeriodico">

    <TextView
        android:id="@+id/lblNombre"
        android:labelFor="@id/txtNombre"
        android:layout_width="78dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Nombre"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/grpTematica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100">

        <RadioButton
            android:id="@+id/btnGeneralista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generalista" />

        <RadioButton
            android:id="@+id/btnDeportes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deportes" />

        <RadioButton
            android:id="@+id/btnPolitica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pol_tica" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grpTematica" />

</androidx.constraintlayout.widget.ConstraintLayout>